--- a/api/alembic.ini
+++ b/api/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = migrations
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/nda_redline
+sqlalchemy.url = postgresql://fatinmojumder@localhost:5432/nda_redline
 
 [loggers]
 keys = root,sqlalchemy,alembic
