--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/nda_redline
       - JWT_SECRET=your-secret-key-change-in-production
       - CORS_ORIGIN=http://localhost:3000
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-your-openai-api-key}
     volumes:
       - ../api:/app
       - uploads:/app/uploads
