--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,6 +5,7 @@ Flask-CORS==4.0.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
 openai==1.3.7
+httpx==0.27.2
 python-docx==1.1.0
 python-docx-replace==0.1.0
 Pillow==10.1.0
